Specify favicon on config

--- a/config.toml
+++ b/config.toml
@@ -9,5 +9,6 @@ Paginate = 6
 enableRobotsTXT = true
 
 [params]
+  favicon = "favicon.ico"
   author = "Developer Davo"
   background_color_class = "bg-dark-blue"
