--- a/config.toml
+++ b/config.toml
@@ -12,3 +12,5 @@ enableRobotsTXT = true
   favicon = "favicon.ico"
   author = "Developer Davo"
   background_color_class = "bg-dark-blue"
+  twitter = "https://twitter.com/DeveloperDavo"
+  github = "https://github.com/DeveloperDavo"
