--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ MetaDataFormat = "yaml"
 DefaultContentLanguage = "en"
 Paginate = 6
 enableRobotsTXT = true
+disableKinds = ["taxonomy","taxonomyTerm"]
 
 [params]
   favicon = "favicon.ico"
