--- a/config.toml
+++ b/config.toml
@@ -15,3 +15,4 @@ disableKinds = ["taxonomy","taxonomyTerm"]
   background_color_class = "bg-dark-blue"
   twitter = "https://twitter.com/DeveloperDavo"
   github = "https://github.com/DeveloperDavo"
+  featured_image = "/img/blackboard-background.jpeg"
