--- a/netlify.toml
+++ b/netlify.toml
@@ -13,4 +13,4 @@
   HUGO_VERSION = "0.30.2"
 
 [context.staging.environment]
-  HUGO_BASEURL = "https://staging--gohugoio.netlify.com/"
+  HUGO_BASEURL = "https://staging--learnitmyway.netlify.com/"
