Add Google Tracking Id

--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ DefaultContentLanguage = "en"
 Paginate = 6
 enableRobotsTXT = true
 disableKinds = ["taxonomy","taxonomyTerm"]
+googleAnalytics = "UA-110144291-1"
 
 [params]
   favicon = "favicon.ico"
