--- a/config.toml
+++ b/config.toml
@@ -15,3 +15,5 @@ googleAnalytics = "UA-110144291-1"
   author = "Developer Davo"
   background_color_class = "bg-dark-blue"
   featured_image = "/img/blackboard-background-2000w.jpeg"
+  twitter = "https://twitter.com/DeveloperDavo"
+  github = "https://github.com/DeveloperDavo"
