Add disqus internal template

--- a/config.toml
+++ b/config.toml
@@ -15,3 +15,4 @@ googleAnalytics = "UA-110144291-1"
   author = "Developer Davo"
   twitter = "https://twitter.com/DeveloperDavo"
   github = "https://github.com/DeveloperDavo"
+  disqusShortname = "learnitmyway"
