--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,7 @@ disableKinds = ["taxonomy","taxonomyTerm"]
 googleAnalytics = "UA-110144291-1"
 
 [params]
+  description = "Developer Davo's learning experiences as a self-taught software developer"
   favicon = "favicon.ico"
   author = "Developer Davo"
   twitter = "https://twitter.com/DeveloperDavo"
