Replace ananke with learnitmyway and remove LICENSE

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://www.learnitmyway.com/"
 languageCode = "en"
 title = "Learn it my way"
-theme = "ananke"
+theme = "learnitmyway"
 
 MetaDataFormat = "yaml"
 DefaultContentLanguage = "en"
