--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/learnitmyway"]
-	path = themes/learnitmyway
-	url = https://github.com/DeveloperDavo/learnitmyway-gohugo-theme.git
+[submodule "themes/ananke"]
+	path = themes/ananke
+	url = https://github.com/DeveloperDavo/gohugo-theme-ananke.git
