--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/ananke"]
-	path = themes/ananke
-	url = https://github.com/DeveloperDavo/gohugo-theme-ananke.git
+[submodule "themes/learnitmyway-gohugo-theme"]
+	path = themes/learnitmyway-gohugo-theme
+	url = https://github.com/DeveloperDavo/learnitmyway-gohugo-theme
