Rename theme to learnitmyway-gohugo-theme in config.toml

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://www.learnitmyway.com/"
 languageCode = "en"
 title = "Learn it my way"
-theme = "learnitmyway"
+theme = "learnitmyway-gohugo-theme"
 
 MetaDataFormat = "yaml"
 DefaultContentLanguage = "en"
