--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ MetaDataFormat = "yaml"
 DefaultContentLanguage = "en"
 Paginate = 6
 enableRobotsTXT = true
-disableKinds = ["taxonomy","taxonomyTerm"]
+disableKinds = ["taxonomy","taxonomyTerm", "section"]
 googleAnalytics = "UA-110144291-1"
 pygmentsStyle = "native"
 pygmentsCodeFences = true
