Revert "Add section to disableKinds"
This reverts commit 5d4b57b893215807d2c14ae4927ddf595876331b.

--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ MetaDataFormat = "yaml"
 DefaultContentLanguage = "en"
 Paginate = 6
 enableRobotsTXT = true
-disableKinds = ["taxonomy","taxonomyTerm", "section"]
+disableKinds = ["taxonomy","taxonomyTerm"]
 googleAnalytics = "UA-110144291-1"
 pygmentsStyle = "native"
 pygmentsCodeFences = true
