revert netlify build command

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "cd src && npm run build:production && cd - && hugo"
+  command = "hugo"
 
 [context.production.environment]
   HUGO_VERSION = "0.30.2"
