Add Stylus and update build and start scripts

--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "scripts": {
     "browser-sync": "browser-sync start --ss 'public'",
     "browser-sync:watch": "browser-sync start --ss 'public' -f 'public'",
-    "build": "npm run postcss && npm run imagemin && hugo",
+    "build": "npm run stylus && npm run postcss && npm run imagemin && hugo",
     "imagemin": "imagemin src/img/* --out-dir=static/dist/img",
     "postcss": "postcss src/css/styles.css -d static/dist/ styles.css",
     "postcss:watch": "postcss src/css/styles.css -d static/dist/ styles.css -w",
-    "start":
-      "parallelshell 'hugo -w' 'npm run postcss:watch' 'npm run browser-sync:watch'"
+    "start": "parallelshell 'npm run stylus:watch' 'hugo -w' 'npm run postcss:watch' 'npm run browser-sync:watch'",
+    "stylus": "stylus src/css/styl/* -o src/css/",
+    "stylus:watch": "stylus src/css/styl/* -o src/css/ -w"
   },
   "devDependencies": {
     "cssnano": "^3.10.0",
@@ -24,6 +25,7 @@
     "postcss-cli": "^5.0.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
+    "stylus": "^0.54.5",
     "tachyons": "^4.9.1"
   },
   "dependencies": {},
