--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "postcss": "postcss src/css/styles.css -d static/dist/ styles.css",
     "postcss:watch": "postcss src/css/styles.css -d static/dist/ styles.css -w",
     "start": "parallelshell 'npm run stylus:watch' 'hugo -w' 'npm run postcss:watch' 'npm run browser-sync:watch'",
-    "stylus": "stylus src/css/styl/pre-styles.styl -o src/css/",
-    "stylus:watch": "stylus src/css/styl/pre-styles.styl -o src/css/ -w"
+    "stylus": "stylus src/css/styl/pre-styles.styl -o src/css/dist/",
+    "stylus:watch": "stylus src/css/styl/pre-styles.styl -o src/css/dist/ -w"
   },
   "devDependencies": {
     "cssnano": "^3.10.0",
