--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "imagemin": "^5.3.1",
     "imagemin-cli": "^3.0.0",
     "normalize.css": "^8.0.0",
-    "parallelshell": "^3.0.2",
     "postcss": "^6.0.17",
     "postcss-cli": "^5.0.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "stylus": "^0.54.5"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.23.6",
+    "parallelshell": "^3.0.2"
   },
   "resolutions": {
     "autoprefixer": "^8.0.0"
