--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "parallelshell 'hugo -w' 'npm run postcss:watch' 'npm run browser-sync:watch'"
   },
   "dependencies": {
+    "autoprefixer": "^8.0.0",
     "cssnano": "^3.10.0",
     "imagemin": "^5.3.1",
     "imagemin-cli": "^3.0.0",
