--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,7 @@
   HUGO_VERSION = "0.30.2"
   HUGO_ENV = "production"
   NODE_ENV = "production"
-  HUGO_BASEURL = "https://www.learnitmyway-hugo.netlify.com/"
+  HUGO_BASEURL = "https://learnitmyway-hugo.netlify.com/"
 
 [context.deploy-preview.environment]
   HUGO_VERSION = "0.30.2"
