--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "learnitmyway-hugo",
+  "name": "learnitmyway",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/DeveloperDavo/learnitmyway-hugo.git",
+  "repository": "https://github.com/DeveloperDavo/learnitmyway.git",
   "author": "Developer Davo <DeveloperDavo@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
