Create bio partial and add it to index and single

--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,7 @@ pygmentsUseClasses = true
 [params]
   description = "Developer Davo's learning experiences as a self-taught software developer"
   author = "Developer Davo"
+  about = "Thanks for visiting Learn it my way! I created this website so I could share my learning experiences as a self-taught software developer."
   twitter = "https://twitter.com/DeveloperDavo"
   github = "https://github.com/DeveloperDavo"
   disqusShortname = "learnitmyway"
