Update GA settings to adhere to GDPR

--- a/config.toml
+++ b/config.toml
@@ -17,3 +17,9 @@ pygmentsUseClasses = true
   twitter = "https://twitter.com/DeveloperDavo"
   github = "https://github.com/DeveloperDavo"
   disqusShortname = "learnitmyway"
+
+[privacy]
+  [privacy.googleAnalytics]
+    anonymizeIP = true
+    respectDoNotTrack = true
+    useSessionStorage = true
