Set private to true and remove main in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "learnitmyway",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "repository": "https://github.com/DeveloperDavo/learnitmyway.git",
   "author": "Developer Davo <DeveloperDavo@users.noreply.github.com>",
   "license": "MIT",
