--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "normalize.css": "^8.0.0",
     "postcss": "^7.0.5",
     "postcss-cli": "^6.0.0",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^12.0.0"
+    "postcss-import": "^12.0.0",
+    "postcss-preset-env": "^6.0.10"
   },
   "devDependencies": {
     "browser-sync": "^2.24.7",
