--- a/netlify.toml
+++ b/netlify.toml
@@ -7,5 +7,8 @@
   HUGO_ENV = "production"
   NODE_ENV = "production"
 
+[context.staging.environment]
+  HUGO_BASEURL = "https://staging--learnitmyway.netlify.com/"
+
 [context.production.environment]
   HUGO_BASEURL = "https://learnitmyway.com/"
