--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "workbench.colorCustomizations": {
     "activityBar.background": "#63a4ff"
+  },
+  "[html]": {
+    "editor.formatOnSave": false
   }
 }
