--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "start": "parallelshell 'hugo --watch' 'npm run postcss:watch' 'npm run browser-sync:watch'"
   },
   "dependencies": {
-    "cssnano": "^4.1.4",
-    "imagemin": "^6.0.0",
+    "cssnano": "^4.1.10",
+    "imagemin": "^6.1.0",
     "imagemin-cli": "^3.0.0",
-    "normalize.css": "^8.0.0",
-    "postcss": "^7.0.5",
-    "postcss-cli": "^6.0.0",
-    "postcss-import": "^12.0.0",
-    "postcss-preset-env": "^6.0.10"
+    "normalize.css": "^8.0.1",
+    "postcss": "^7.0.17",
+    "postcss-cli": "^6.1.3",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.24.7",
-    "parallelshell": "3.0.1"
+    "browser-sync": "^2.26.7",
+    "parallelshell": "^3.0.1"
   }
 }
