Replace Developer Davo in description and author

--- a/config.toml
+++ b/config.toml
@@ -12,8 +12,8 @@ pygmentsCodeFences = true
 pygmentsUseClasses = true
 
 [params]
-  description = "Developer Davo's learning experiences as a self-taught software developer"
-  author = "Developer Davo"
+  description = "My learning experiences as a self-taught software developer"
+  author = "David"
   about = "Thanks for visiting Learn it my way! I created this website so I could share my learning experiences as a self-taught software developer."
   twitter = "https://twitter.com/learnitmyway"
   github = "https://github.com/learnitmyway"
