--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,9 @@
     "titleBar.inactiveForeground": "#15202b99",
     "statusBar.background": "#63a4ff",
     "statusBarItem.hoverBackground": "#3086ff",
-    "statusBar.foreground": "#15202b"
+    "statusBar.foreground": "#15202b",
+    "statusBar.border": "#63a4ff",
+    "titleBar.border": "#63a4ff"
   },
   "[html]": {
     "editor.formatOnSave": false
