Add featured image to full-stack-opinion

--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,7 @@ pygmentsUseClasses = true
 
 [params]
   description = "David's learning experiences as a self-taught software developer"
+  share_image = "https://res.cloudinary.com/developerdavo/image/upload/f_auto,w_1200/v1590954325/learnitmyway/header.png"
   author = "David"
   about = "Thanks for visiting Learn it my way! I created this website so I could share my learning experiences as a self-taught software developer."
   twitter = "https://twitter.com/learnitmyway"
