--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "npm run build"
+  command = "make build"
 
 [build.environment]
   HUGO_VERSION = "0.72.0"
